--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,58 @@
 theme: jekyll-theme-slate
+Title: Welcome to Deepika's Personal Space
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title> Deepika's Blog </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="main.css" rel="stylesheet" type="text/css" media="screen,projection" >
+</head>
+<br>
+<br>
+<br>
+<h1> Deepika's Personal Space</h1>
+
+<a href="sample.html" target="_self" class="button ">Home</a>
+<a href="FunActivity.html" target="_self" class="button ">Fun Time Activities</a>
+
+<br>
+<img class="circle" src="Pics/Deepika.jpg" />
+
+	<p class="body-text"> Hi, My name is Deepika Angelene Jantz. I am a Graduate student majoring in Management Information Systems.
+	I was associated with a major IT firm from India,Infosys Limited for 3 years(Oct,2013-Dec,2016). This is where I got to learn
+different technologies and decided to specialize in Data Analytics! I gained expertise on different technologies: SAP-HANA,
+		SAP-ABAP,
+		SAP Security.
+		<br /><br /><br />
+		Talking about my hobbies- I like singing and enjoy listening to soft music.
+		I love to learn and explore new things in life. I learnt Rock Wall Climbing after moving in to Omaha.
+		I believe that it is never too late to learn anything. I also enjoy bike riding.</p>
+
+
+
+
+   <!-- Footer / About Section -->
+<footer class="sample-text" id="about">
+    <div>
+		<p> If you would like to get in touch with me, I have my social media links below! I would love to connect
+	with you!!</p>
+		<hr>
+		<a href="https://twitter.com/DeepsJantz">
+		<img title="Twitter" alt="Twitter" src="Pics/01_twitter1.png" width="35" height="35" />
+		</a>
+		<a href="https://www.linkedin.com/in/deepika-jantz-07343b43/">
+		<img title="LinkedIn" alt="LinkedIn" src="Pics/07_linkedin1.png" width="35" height="35" />
+		</a>
+		<a href="https://www.facebook.com/deepika.jantz">
+		<img title="Facebook" alt="Facebook" src="Pics/02_facebook1.png" width="35" height="35" />
+		</a>
+		<a href="https://www.instagram.com/pepdeck91/">
+		<img title="Instagram" alt="Instagram" src="Pics/13_pinterest1.png" width="35" height="35" />
+		</a>
+	</div>
+	<hr>
+ <p>&copy; 2017 Deepika Jantz. </p>
+  </footer>
+</body>
+</html>
